salesmanagement/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: salesmanagement-service
    namespace: default
spec:
    selector:
      app: salesmanagement
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8080
    type: ClusterIP
